fix bug with new hover-section z-index covering glazed mini tabs

--- a/sass/vendor-extensions/_bootstrap-3.scss
+++ b/sass/vendor-extensions/_bootstrap-3.scss
@@ -134,6 +134,7 @@ a.text-primary:focus {
   color: $primary;
   border: none;
   box-shadow: none;
+  text-decoration: underline;
 }
 
 .wrap-containers .nav > li > a.active {
@@ -357,7 +358,7 @@ blockquote footer, blockquote small, blockquote .small {
   position: absolute;
   margin-top: 2px;
   left: 50%;
-  z-index: 2000;
+  z-index: 5000;
   .tabs--primary {
     position: relative;
     left: -50%;
